# ardupilot_gz

./: README.md  ros2_gz_macos.repos
ardupilot_gz_application/: CMakeLists.txt  package.xml
ardupilot_gz_application/scripts/: odometry_publisher.py
ardupilot_gz_application/src/ardupilot_gz_application/: __init__.py  odometry_publisher.py
ardupilot_gz_arm_moveit/: CMakeLists.txt  package.xml
ardupilot_gz_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ardupilot_gz_arm_moveit/launch/: arm_standalone.launch.py  iris_arm_gazebo.launch.py  iris_arm_rviz.launch.py
ardupilot_gz_arm_moveit/scripts/: moveit_to_gz_bridge.py
ardupilot_gz_arm_moveit_gz_bridge/: package.xml  setup.cfg  setup.py
ardupilot_gz_arm_moveit_gz_bridge/ardupilot_gz_arm_moveit_gz_bridge/: moveit_to_gz_bridge.py
ardupilot_gz_bringup/: package.xml
ardupilot_gz_bringup/config/: alti_transition_bridge.yaml  image_bridge.yaml  iris_bridge.yaml  wildthumper_bridge.yaml
ardupilot_gz_bringup/launch/: alti_transition_runway.launch.py  image_bridge.launch.py  iris_maze.launch.py  iris_runway.launch.py  iris_warehouse.launch.py  mocap.launch.py  multiagent.launch.py  wildthumper_playpen.launch.py
ardupilot_gz_bringup/launch/robots/: alti_transition.launch.py  iris.launch.py  iris_arm.launch.py  iris_lidar.launch.py  robot.launch.py  wildthumper.launch.py
ardupilot_gz_bringup/rviz/: alti_transition.rviz  iris.rviz  iris_with_lidar.rviz  wildthumper.rviz
ardupilot_gz_description/models/Avengers_Thor_PLlrpYniaeB/: metadata.pbtxt  model.config  model.sdf
ardupilot_gz_description/models/Dino_3/: metadata.pbtxt  model.config  model.sdf
ardupilot_gz_description/models/Dino_4/: metadata.pbtxt  model.config  model.sdf
ardupilot_gz_description/models/Dino_5/: metadata.pbtxt  model.config  model.sdf
ardupilot_gz_description/models/Schleich_Spinosaurus/: metadata.pbtxt  model.config  model.sdf
ardupilot_gz_description/models/Schleich_Therizinosaurus/: metadata.pbtxt  model.config  model.sdf
ardupilot_gz_description/models/iris_with_arm/: model.config  model.sdf
ardupilot_gz_description/models/iris_with_lidar/: model.sdf
ardupilot_gz_description/models/learm/: model.sdf  model.urdf
ardupilot_gz_description/models/learm/meshes/: base_lowpoly.stl  carpal_left.dae  carpal_left_lowpoly.stl  carpal_right.dae  carpal_right_lowpoly.stl  finger.dae  finger_lowpoly.stl  forearm_lowpoly.stl  hand_lowpoly.stl  humerus.dae  humerus_lowpoly.stl  shoulder_lowpoly.stl  tendon.dae  tendon_lowpoly.stl  wrist_lowpoly.stl
ardupilot_gz_description/models/learm_with_ardupilot/: model.config  model.sdf
ardupilot_gz_gazebo/worlds/: iris_arm_world.sdf  iris_runway.sdf  mocap.sdf  pick_n_place.sdf
learm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
learm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  learm.ros2_control.xacro  learm.srdf  learm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
learm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
